--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "chart.js": "3.4.1",
     "classnames": "2.3.1",
     "firebase": "^9.9.3",
+    "mapbox-gl": "^2.10.0",
     "perfect-scrollbar": "1.5.5",
     "prop-types": "15.8.1",
     "react": ">=16.8.0",
     "react-chartjs-2": "3.0.4",
     "react-dom": ">=16.8.0",
     "react-icons": "^4.4.0",
+    "react-map-gl": "^7.0.19",
     "react-notification-alert": "0.0.13",
     "react-router-dom": "5.2.0",
     "react-scripts": "5.0.1",
